--- a/examples/react/src/App.css
+++ b/examples/react/src/App.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-bottom: 1px solid #e8e8e8;
+  margin-bottom: 40px;
 }
 
 .app-title {
